# deja

./: .gitignore  .gitmodules  CMakeLists.txt  hc_sr04.pio  msg.options  msg.proto
ext/motion_driver/: inv_mpu.c  inv_mpu.h
motion_driver/: inv_mpu.c  inv_mpu.h
pcb/: pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch
src/: comm.hpp  common.hpp  io.hpp  irq.cpp  irq.hpp  log.cpp  log.h  log.hpp  main.cpp
src/comm/: cdc.cpp  cdc.hpp  comm.cpp  comm.hpp  nrf24l01.cpp  nrf24l01.hpp  twoway.hpp  uart.cpp  uart.hpp
src/io/: bmp280.cpp  bmp280.hpp  btn.cpp  btn.hpp  cdc.cpp  cdc.hpp  hc_sr04.cpp  hc_sr04.hpp  i2c.cpp  i2c.hpp  io.cpp  io.hpp  mpu9250.cpp  mpu9250.hpp  nrf24l01.cpp  power.cpp  power.hpp  pwm.cpp  pwm.hpp  ublox.cpp
src/io/ubx/: ubx.cpp
src/math/: MadgwickAHRS.cpp  MadgwickAHRS.hpp  PID.hpp
ui/: index.html  main.js
